[gd_scene load_steps=5 format=3 uid="uid://kkrq88b8tbec"]

[ext_resource type="Script" path="res://scene/home/tab_event/popup_event_base.gd" id="1_kxl14"]
[ext_resource type="Theme" uid="uid://ddexy01pp37b1" path="res://asset/theme/home/home.tres" id="2_a6er6"]
[ext_resource type="StyleBox" uid="uid://btyn7bgrl1pi" path="res://asset/theme/common/stylebox/common_panel_tooltip.tres" id="3_xkm28"]
[ext_resource type="Script" path="res://scene/common/line_edit/filter_input_to_regex.gd" id="4_eadkk"]

[node name="Popup_EventBase" type="Popup"]
auto_translate_mode = 1
disable_3d = true
transparent_bg = true
initial_position = 1
size = Vector2i(480, 145)
visible = true
transparent = true
script = ExtResource("1_kxl14")

[node name="Content" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(480, 145)
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("2_a6er6")
theme_override_styles/panel = ExtResource("3_xkm28")

[node name="VBox" type="VBoxContainer" parent="Content"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="Label_Header" type="Label" parent="Content/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "HOME_TAB_EVENT_POPUP"
horizontal_alignment = 1

[node name="Line_FileName" type="LineEdit" parent="Content/VBox"]
unique_name_in_owner = true
layout_mode = 2
max_length = 48
context_menu_enabled = false
clear_button_enabled = true
script = ExtResource("4_eadkk")

[node name="Button_Submit" type="Button" parent="Content/VBox"]
layout_mode = 2
size_flags_vertical = 10
mouse_default_cursor_shape = 2
text = "HOME_TAB_POPUP_SUBMIT"

[connection signal="text_submitted" from="Content/VBox/Line_FileName" to="." method="_on_submit" unbinds=1]
[connection signal="text_validated" from="Content/VBox/Line_FileName" to="." method="_on_file_name_updated"]
[connection signal="pressed" from="Content/VBox/Button_Submit" to="." method="_on_submit"]
